2010-02-25 Borut Razem <borut.razem AT siol.net>

	* sdcc-build/lib/bootstrap.mk:
	  convert as2gbmap to a Windowd batch script if mingw crosscompiling

2010-02-24 Borut Razem <borut.razem AT siol.net>

	* sdcc-build/lib/bootstrap.mk: convert as2gbmap.py to an executable

2010-01-16 Borut Razem <borut.razem AT siol.net>

	* sdcc-build/lib/bootstrap.mk, sdcc-build/lib/doc-archive.mk:
	  as/ renamed to sdas/

2009-12-29 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh: removed superfluous $

2009-12-04 Borut Razem <borut.razem AT siol.net>

	* lib/send-mail.mk, lib/bootstrap.mk:
	  removed per target logging, send-mail target is noop
	* sdcc-build-bootstrap.sh:
	  removed HOMEBUILD since it is the same as BUILDROOT
	* components/sdcc.mk, lib/variables.mk:
	  removed per target configure logging

2009-10-12 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: search makensis in standard locations if
	  not found in NSISBIN

2009-02-08 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: add COPYING3.txt to win32 setup package

2008-12-18 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk, lib/upload.mk: defaults for DCF
	* lib/upload.mk: removed remove-old-versions makefile target

2008-11-09 Borut Razem <borut.razem AT siol.net>

	* lib/ports.mk: commented out ports/i186.mk and ports/tlcs900h.mk
	  to remove "configure: WARNING: unrecognized options:
	  --disable-i186-port, --disable-tlcs900h-port"

2008-09-23 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk:
	  new SF web server sdcc-builder,sdcc@web.sourceforge.net

2008-03-31 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: generate knownbugs.html - 2nd try

2008-03-24 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: generate knownbugs.html

2008-03-16 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: rename COPYING.TX to COPYING.txt

2008-03-10 Borut Razem <borut.razem AT siol.net>
